Feat/can 73/participation (#32)
WIP
