# docs/api.yml
@@ -95,6 +95,53 @@ paths:
                   example: error
 
   /crowdactions/{crowdactionID}/participation:
+    get:
+      tags:
+        - "Crowdaction"
+      summary: "Get participating in a particular crowdaction"
+      parameters:
+      - name: "crowdactionID"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
+      responses:
+        default:
+          description: "Success message"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  userID:
+                    type: string
+                  name:
+                    type: string
+                    description: "Displayname of the user"
+                  crowdactionID:
+                    type: string
+                  commitments:
+                    type: array
+                    items:
+                      type: string
+                    example: ["vegetarian", "no-dairy"]
+                    description: Array of commitment ids
+                  date:
+                    type: string
+                    pattern: \d{4}-\d{2}-\d{2}
+                    example: "2006-01-02"
+        404:
+          description: "Not found (not participating)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "not participating"
+      security:
+      - FirebaseAuthorizer: []
     delete:
       tags:
         - "Crowdaction"
@@ -139,8 +186,18 @@ paths:
             schema:
               type: object
               properties:
-                commitmentID:
+                password:
                   type: string
+                  example: myEvent-myCompany2021
+                  description: |
+                    Password or or empty string if none required (or do not include field)
+                    (NOTE: This field is not required for the MVP)
+                commitments:
+                  type: array
+                  items:
+                    type: string
+                  example: ["no-meat", "no-dairy"]
+
       parameters:
       - name: "crowdactionID"
         in: "path"
@@ -403,6 +460,29 @@ components:
         bio:
           type: string
           example: "Hi, I am Max and I am trying to eat less meat to stop animal suffering."
+    CommitmentOption:
+      type: object
+      properties:
+        id:
+          type: string
+          example: vegetarian
+        label: 
+          type: string
+          example: "Becoming vegetarian"
+        description:
+          type: string
+          example: "I will not eat any meat from any animal (including fish)."
+        requires:
+          type: array
+          description: >
+            Commitments that are included in (and required by) this commitment.
+            They can also be individually selected
+          items:
+            $ref: '#/components/schemas/CommitmentOption'
+            example:
+              id: "no-beef"
+              label: "Not eating beef"
+              description: "I will avoid eating beef (Goodbye stake)."
     Crowdaction:
       type: object
       properties: 
@@ -432,5 +512,24 @@ components:
           pattern: \d{4}-\d{2}-\d{2}
           example: "2021-11-28"
         password_join:
-          description: Password or 'required' to indicate that a password is required
+          description: |
+            Password or 'required' to indicate that a password is required or empty string
+            (NOTE: This field will always contain the password or be empty for the MVP)
           type: string
+        commitment_options:
+          type: array
+          items:
+            $ref: '#/components/schemas/CommitmentOption'
+        participant_count:
+          type: integer
+        top_participants:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                type: string
+                example: "Peter Parker"
+              userID:
+                type: string
+                example: "6620cf87-44ed-456e-9798-d5cbeb7fa10a"
